[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Art/SixShooyer.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/shoulder.png" type="Texture" id=2]
[ext_resource path="res://Player/SixShooter.gd" type="Script" id=4]
[ext_resource path="res://Player/Arm_end.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 5, 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SixShooter" type="Node2D"]
script = ExtResource( 4 )

[node name="Shoulder" type="Sprite" parent="."]
position = Vector2( 49, 9 )
texture = ExtResource( 2 )

[node name="SixShooter" type="AnimatedSprite" parent="."]
position = Vector2( 49, 20 )
rotation = 4.71239
frames = SubResource( 2 )

[node name="ShoulderEnd" parent="." instance=ExtResource( 5 )]

[node name="HandEnd" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 13 )
